--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-This is a space for me to learn Ruby on Rails.
+###This is a new version (2.0) of the Fog City Run website.###
+
+https://fogcityrun.herokuapp.com
+
+The old (currently production) version of this website lives here: https://fogcityrun.com
