--- a/README
+++ b/README
@@ -1,5 +1,3 @@
-###This is a new version (2.0) of the Fog City Run website.###
+This is a new version (2.0) of the Fog City Run website.
 
-https://fogcityrun.herokuapp.com
-
-The old (currently production) version of this website lives here: https://fogcityrun.com
+https://fogcityrun.com
