--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 This is a new version (2.0) of the Fog City Run website.
 
-http://fogcityrun.com
+Prod: http://fogcityrun.com
+Staging: https://fogcityrun-dev.herokuapp.com
