--- a/README
+++ b/README
@@ -2,3 +2,7 @@ This is a new version (2.0) of the Fog City Run website.
 
 Prod: http://fogcityrun.com
 Staging: https://fogcityrun-dev.herokuapp.com
+
+# Linting #
+
+'rake eslint:run_all'
